[package]
name = "ntex-amqp"
version = "5.0.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "AMQP 1.0 Client/Server framework"
documentation = "https://docs.rs/ntex-amqp"
repository = "https://github.com/ntex-rs/ntex-amqp.git"
categories = ["network-programming"]
keywords = ["AMQP", "IoT", "messaging"]
license = "MIT OR Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config"]
edition = "2024"
rust-version = "1.85"

[workspace]
members = [
  ".",
  "codec",
]

[features]
default = []

# log frames on trace level
frame-trace = []

[dependencies]
ntex-amqp-codec = "2.0.0"

ntex-bytes = "1"
ntex-router = "1"
ntex-rt = "3"
ntex-io = "3"
ntex-net = "3"
ntex-util = "3"
ntex-service = "3.6"

bitflags = "2"
log = "0.4"
pin-project-lite = "0.2"
slab = "0.4"
uuid = { version = "1", features = ["v4"] }
derive_more = { version = "2", features = ["from"] }
thiserror = "2"

[dev-dependencies]
env_logger = "0.11"
rand = "0.9"
ntex-amqp = { path = ".", features = ["frame-trace"] }
ntex = "3.0.0-pre.2"

[patch.crates-io]
ntex-amqp = { path = "." }
ntex-amqp-codec = { path = "codec" }
