[package]
name = "ntex-amqp-codec"
version = "0.9.5"
description = "AMQP 1.0 Protocol Codec"
authors = ["Nikolay Kim <fafhrd91@gmail.com>", "Max Gortman <mgortman@microsoft.com>", "Mike Yagley <myagley@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
ntex-bytes = "0.1"
ntex-codec = "0.6"
byteorder = "1"
fxhash = "0.2"
chrono = { version = "0.4", default-features = false }
derive_more = { version = "1", features = ["display", "from"] }
ordered-float = "4.2"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
handlebars = { version = "6", optional = true }
serde        = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
serde_json   = { version = "1", optional = true }
lazy_static  = { version = "1", optional = true }
regex = { version = "1", optional = true }

[features]
default = []

from-spec = ["handlebars", "serde", "serde_derive", "serde_json", "lazy_static", "regex"]
