[package]
name = "ntex-amqp-codec"
version = "2.0.0"
description = "AMQP 1.0 Protocol Codec"
authors = ["Nikolay Kim <fafhrd91@gmail.com>", "Max Gortman <mgortman@microsoft.com>", "Mike Yagley <myagley@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
ntex-bytes = "1"
ntex-codec = "1"
ntex-util = "3"
byteorder = "1"
chrono = { version = "0.4", default-features = false }
derive_more = { version = "2", features = ["from"] }
ordered-float = "5"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
handlebars = { version = "6", optional = true }
serde        = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
serde_json   = { version = "1", optional = true }
lazy_static  = { version = "1", optional = true }
regex = { version = "1", optional = true }

[dev-dependencies]
test-case = "3"

[features]
default = []

from-spec = ["handlebars", "serde", "serde_derive", "serde_json", "lazy_static", "regex"]
